correction de la 3e partie

--- a/edla/conclusion.tex
+++ b/edla/conclusion.tex
@@ -5,7 +5,7 @@ Durant cet état de l'art, nous avons étudié plusieurs publications portant su
 d'une main. Nous avons vu une première solution utilisant une image couleur. Cette solution était
 intéressante quand les caméras de profondeur n'étaient pas très répandu. Au vu des résultats fourni dans
 \cite{haarlike} cette méthode est efficace, mais elle n'est pas adaptée à la modélisation d'une main 3D, elle permet
-de traquer la main et de reconnaître quelques postures. De plus, les outils que l'on nous fournit nous permettent
+de suivre la main et de reconnaître quelques postures. De plus, les outils que l'on nous fournit nous permettent
 de gagner du temps sur certaine partie de notre développement et la méthode utilisant une image couleur
 est assez compliqué à implémenter. C'est pourquoi nous avons choisi la seconde méthode qui est plus
 simple à développer et plus précise grâce aux outils fournis par la Kinect. La difficulté de cette méthode
@@ -16,7 +16,7 @@ Nous avons donc prévu une première phase dans le projet où nous allons intég
 dans une scène Unity3D au moyen de script. Cette première phase est partagée en plusieurs étapes permettant
 de partager au mieux les tâches entre chacun d'entre nous. La seconde phase est la réalisation du projet en lui-même, c'est-à-dire 
 que nous devons obtenir un modèle qui se déplace dans l'espace et effectue les mouvements de l'utilisateur.
-Et la dernière phase est la réalisation d'une application de démonstration qui doit valoriser notre travail
+La dernière phase est la réalisation d'une application de démonstration qui doit valoriser notre travail
 en demandant à l'utilisateur d'effectuer une tâche qu'il ne pourrait réaliser avec d'autre périphérique comme
 la souris et le clavier. Cette application doit montrer le niveau de précision qu'il est possible d'atteindre
 avec ce genre de système.\\
