--- a/edla/presentation.tex
+++ b/edla/presentation.tex
@@ -205,13 +205,10 @@ Les amélioration qui nous intéressent pour le projet sont :
  \item Le plus important : l'augmentation du nombre de point détectés, principalement l'ajout de 2 points au niveau de la main
 \end{itemize}
 
-Un point négatif cependant : la distance minimale passe de 40 à 50cm 
-
-
 \begin{figure}[H]
   \begin{center}
-    \includegraphics[width=250px]{images/Kinect1vs2.png}
-    \caption{Différence Kinect 1 et Kinect 2}
+    \includegraphics[width=250px]{images/kinect-v2-introduction-and-tutorial-8-638.jpg}
+    \caption{Différence entre Kinect V1 et Kinect V2}
     \label{fig:kinect1vs2}
   \end{center}
 \end{figure}
