correction reste solution et previsionnel

--- a/edla/conclusion.tex
+++ b/edla/conclusion.tex
@@ -3,27 +3,27 @@
 %solution envisagé
 Durant cet état de l'art, nous avons étudié plusieurs publications portant sur la détection et le suivi
 d'une main. Nous avons vu une première solution utilisant une image couleur. Cette solution était
-intéressante quand les caméras de profondeur n'étaient pas très répandu. Au vu des résultats fourni dans
-\cite{haarlike} cette méthode est efficace, mais elle n'est pas adaptée à la modélisation d'une main 3D, elle permet
+intéressante quand les caméras de profondeur n'étaient pas très répandues. Au vu des résultats fournis par S. Bilal
+\cite{haarlike}, cette méthode est efficace, mais elle n'est pas adaptée à la modélisation d'une main 3D. Elle permet seulement
 de suivre la main et de reconnaître quelques postures. De plus, les outils que l'on nous fournit nous permettent
-de gagner du temps sur certaine partie de notre développement et la méthode utilisant une image couleur
-est assez compliqué à implémenter. C'est pourquoi nous avons choisi la seconde méthode qui est plus
-simple à développer et plus précise grâce aux outils fournis par la Kinect. La difficulté de cette méthode
-est l'adapation du modèle à la main de l'utilisateur.\\
+de gagner du temps sur certaines parties de notre développement et la méthode utilisant une image couleur
+est assez compliquée à implémenter. C'est pourquoi nous avons choisi la seconde méthode qui est plus
+simple à développer et plus précise grâce aux outils fournis par la Kinect 2. La difficulté de cette méthode
+est l'adaptation du modèle à la main de l'utilisateur.\\
 
 %previsionnel
 Nous avons donc prévu une première phase dans le projet où nous allons intégrer les outils et le modèle
-dans une scène Unity3D au moyen de script. Cette première phase est partagée en plusieurs étapes permettant
+dans une scène Unity3D au moyen de script. Cette première phase est divisée en plusieurs étapes permettant
 de partager au mieux les tâches entre chacun d'entre nous. La seconde phase est la réalisation du projet en lui-même, c'est-à-dire 
 que nous devons obtenir un modèle qui se déplace dans l'espace et effectue les mouvements de l'utilisateur.
 La dernière phase est la réalisation d'une application de démonstration qui doit valoriser notre travail
-en demandant à l'utilisateur d'effectuer une tâche qu'il ne pourrait réaliser avec d'autre périphérique comme
+en demandant à l'utilisateur d'effectuer une tâche qu'il ne pourrait réaliser avec d'autres périphériques comme
 la souris et le clavier. Cette application doit montrer le niveau de précision qu'il est possible d'atteindre
 avec ce genre de système.\\
 
 %ce que nous avons appris
-Cette première partie du projet a été très instructif que se soit sur l'apprentissage des techniques de détection et de manipulation
-de modèle 3D que sur le plan de la collaboration en équipe. Nous avons énormément appris sur la rédaction d'un
-état de l'art, ainsi que sur la compréhension d'article de recherche. Nous avons pu pleinement mettre à profit
-nos cours sur \og l'initiation à la recherche et à l'innovation \fg. Suite à la réalisation de ce rapport nous avons pu
-clairement définir les tâches et les méthodes à utiliser pour réaliser que ce projet soit un succès. 
+Cette première partie du projet a été très instructive, que ce soit sur l'apprentissage des techniques de détection et de manipulation
+de modèle 3D, que sur le plan de la collaboration en équipe. Nous avons énormément appris sur la rédaction d'un
+état de l'art, ainsi que sur la compréhension d'articles de recherche. Nous avons pu pleinement mettre à profit
+nos cours sur \og l'initiation à la recherche et à l'innovation \fg. Suite à la réalisation de ce rapport, nous avons pu
+clairement définir les tâches et les méthodes à utiliser pour que ce projet soit un succès. 
