--- a/edla/intro.tex
+++ b/edla/intro.tex
@@ -6,8 +6,8 @@ une spécialité du master informatique de l'université de Lille 1},
 nous avons l'occasion de réaliser un projet orienté recherche. Nous avons 
 sélectionné le sujet \og Hand Kinect \fg, car nous nous intéressons à la 
 modélisation 3D et aux dernières techniques d'acquisition.
-De plus, ce projet est en rapport avec chacune de nos matières de
-notre master. Nous utilisons des notions de modélisation 3D de la main, de vision par ordinateur à l'aide d'une caméra, de réalité virtuelle et l'interaction avec l'environnement dans lequel la main va se déplacer et de nouvelle intéraction
+De plus, ce projet est en rapport avec chacune des matières de
+notre master. Nous utilisons des notions de modélisation 3D de la main, de vision par ordinateur à l'aide d'une caméra, de réalité virtuelle et l'interaction avec l'environnement dans lequel la main va se déplacer et de nouvelles intéractions
 homme machine qui est le sujet de ce projet.\\
 
 L'homme utilise continuellement ses mains de manière naturelle. Nous 
@@ -19,7 +19,7 @@ utiliser les mains pour interagir avec un ordinateur reste encore limité.\\
 Les études sont nombreuses dans le domaine de la détection des mains, 
 de la reconnaissance de leurs poses, dans leur suivi et dans la reconstruction 
 3D des articulations des mains et de leurs formes. Cela fait plusieurs 
-années, que la recherche scientifique et les techniques d'acquisition 
+années que la recherche scientifique et les techniques d'acquisition 
 évoluent. Dans les années 90, la littérature considère principalement les 
 caméras dont la sortie est un flux RGB. Les méthodes proposent généralement la 
 détection de la main, de sa pose et de sa forme. Par la suite, des techniques 
