ajout de la biblio

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -15,6 +15,7 @@
     \date{\oldstylenums{Novembre 2015}}
 
 \begin{document}
+  
   \frame{\titlepage}
   
    \begin{frame}
@@ -72,6 +73,7 @@
  	      \label{fig:pseudoHaar}
  	    \end{center}
  	  \end{figure}
+ 	  \cite{viola2001jones}
  	\end{frame}
  	
  	\begin{frame}
@@ -96,6 +98,7 @@
  	      \label{fig:bodyPartRecognition}
  	    \end{center}
  	  \end{figure}
+ 	  \cite{export:238453}
  	\end{frame}
  	
  	\begin{frame}
@@ -107,6 +110,7 @@
  	      \label{fig:modelisation}
  	    \end{center}
  	  \end{figure}
+ 	  \cite{export:217428}
  	\end{frame}
  	
  	\begin{frame}
@@ -126,4 +130,11 @@
  	  %\url{videos/leapMotion.mp4}
  	  \movie[width=10cm, height=7cm]{Exemple}{videos/leapMotion.mp4}
  	\end{frame}
+ 	
+ 	\begin{frame}
+ 	  \frametitle{Référence}
+ 	  \bibliographystyle{ieeetr} % or try abbrvnat or unsrtnat or plainnat
+    \bibliography{biblio}
+ 	\end{frame}
+ 	
 \end{document}
