ajout des numéros de slides

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -7,12 +7,20 @@
 \usepackage{multimedia}
 \usepackage{url}
 
+\addtobeamertemplate{navigation symbols}{}{
+    \usebeamerfont{footline}
+    \usebeamercolor[fg]{footline}
+    \hspace{1em}
+    \insertframenumber/\inserttotalframenumber
+}
+
 \usetheme{Warsaw}
 
 	\title{Hand Kinect}
-  	\author{Elliot Vanegue, Gaëtan Deflandre et Alexis Robache}
-  	\institute{\large Suivi par :\\ Hazem Wannous et Jean-Philippe Vandeborre}
-    \date{\oldstylenums{Novembre 2015}}
+  \author{Elliot Vanegue, Gaëtan Deflandre et Alexis Robache}
+  \institute{\large Suivi par :\\ 
+  Hazem Wannous et Jean-Philippe Vandeborre}
+  \date{\oldstylenums{Novembre 2015}}
 
 \begin{document}
   
