essai avec vidéo

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -135,7 +135,7 @@
  	\begin{frame}
  	  \frametitle{Conclusions}
  	  Application de démontration\\
- 	  %\url{videos/leapMotion.mp4}
+ 	  \url{videos/leapMotion.mp4}
  	  \movie[width=10cm, height=7cm]{Exemple}{videos/leapMotion.mp4}
  	\end{frame}
  	
