reformulation pb leap motion

--- a/edla/presentation.tex
+++ b/edla/presentation.tex
@@ -98,14 +98,15 @@ D'abord, la Kinect 2 peut déjà suivre six personnes à la fois. Elle
 détecte un squelette de vingt-six points (voir Fig. 
 \ref{fig:skeleton_kinect2} et \ref{fig:kinect1vs2}). Cependant, les 
 mains sont représentées seulement par 4 points, qui sont le centre du
-poignet, le centre de la main, le pouce et le bout du majeur. C'est une amélioration par rapport à la Kinect 1, qui ne détectait que le poignet 
+poignet, le centre de la main, le pouce et le bout du majeur. C'est une 
+amélioration par rapport à la Kinect 1, qui ne détectait que le poignet 
 et le centre de la main.\\
 
 D'autres outils permettent de détecter les mains des utilisateurs. Par 
 exemple le Leap Motion détecte les articulations des mains. Néanmoins,
-ce capteur est limité, car il faut garder les mains proches et dans le 
-cadre du capteur. Leap Motion ne permet pas de détecter le squelette 
-complet d'une personne.\\
+ce capteur est limité, car il faut garder les mains proches du capteur.
+La portée et le champs de détection de ce dispositif reste restreint. 
+Leap Motion ne permet pas de détecter le squelette complet d'une personne.\\
 
 À partir de ces constats, nous pouvons formuler la problématique 
 suivante. Puisque, 
